
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int o; } ;
typedef TYPE_1__ RPC_AC_LIST ;


 int FreeAcList (int ) ;

void FreeRpcAcList(RPC_AC_LIST *t)
{

 if (t == ((void*)0))
 {
  return;
 }

 FreeAcList(t->o);
}
